      the cached JWK set is about to expire and should be updated. Intended to
      allow for transient retrieval exceptions (iss #348).

version 8.11 (2020-03-27)
    * Adds new DateUtils.isWithin method for checking if a date is within the
      specified reference, give or take an accepted clock skew.

version 8.12 (2020-04-05)
    * Adds new JWSSignerFactory factory for creating a JWS signer from a given
      JWK, with a DefaultJWSSignerFactory implementation supporting HMAC, RSA,
      EC and EdDSA signatures.

version 8.13 (2020-04-06)
    * Adds new JWKSet.isPresent(JWK) method which returns true if the specified
      JWK is present in the JWK set as public or private JWK, by comparing its
      thumbprint with those of the keys in the set.

version 8.14 (2020-04-06)
    * Renames JWKSet.isPresent to JWKSet.containsJWK.

version 8.14.1 (2020-04-09)
    * Fixes parsing of JWK key_ops from JWK.toJSONObject() output (iss #355).

version 8.15 (2020-04-17)
    * Implements JSON Web Signature (JWS) Unencoded Payload Option (RFC 7797).
      Adds new JWSHeader.Builder.base64URLEncodePayload and
      JWSHeader.isBase64URLEncodePayload methods for the boolean "b64"
      parameter. Adds new static JWSObject.parse(String,Payload) method for
      parsing JWS objects with a detached and optionally unencoded payload.
    * Makes the "b64" (base64url-encode payload) JWS header parameter a
      processed header parameter in
      CriticalHeaderParamsDeferral.getProcessedCriticalHeaderParams().

version 8.16 (2020-04-26)
    * Updates the JCA algorithm names for PS256, PS384 and PS512.

version 8.17 (2020-05-12)
    * Updates JWKMatcher.forJWSHeader to support EdDSA.

version 8.17.1 (2020-05-27)
    * Improves ambiguous JWT claim verification error message (iss #361).

version 8.18 (2020-06-02)
    * Updates JWSVerificationKeySelector to support multiple allowed JWS
      algorithms, replaces getExpectedJWSAlgorithm method with isAllowed (iss
      #353).